--- a/Pagina Web/index.html
+++ b/Pagina Web/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <title>Inicio</title>
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -13,12 +13,26 @@
 <header class="header" id="Cabezara">
   <h1>Compañia de repuestos </h1>
   <nav class="menu-navegation">
-    <a href="#">Inicio</a>
-    <a href="#">Productos</a>
-    <a href="#">Promociones</a>
-    <a href="#">Acerca de</a>
-    <a href="#">Comprar</a>
-    <a href="#">Contactenos</a>
+    <ul class="nav nav-tabs nav-fill">
+      <li class="nav-item">
+    <a class="nav-item nav-link active" href="#">Inicio</a>
+  </li>
+    <li class="nav-item">
+    <a  class="nav-item nav-link " href="#">Productos</a>
+      </li>
+      <li class="nav-item">
+    <a class="nav-item nav-link " href="#">Promociones</a>
+      </li>
+  <li class="nav-item">
+    <a class="nav-item nav-link " href="Acercade.html">Acerca de</a>
+      </li>
+  <li class="nav-item">
+    <a class="nav-item nav-link " href="#">Comprar</a>
+      </li>
+  <li class="nav-item">
+    <a class="nav-item nav-link " href="Conctactenos.html">Contáctanos</a>
+      </li>
+     </ul>
   </nav>
   <div class="content head">
     <h1 class="titulo ">Los mejores repuestos para los mejores carros</h1>
@@ -77,49 +91,49 @@
 <div class="content-carusel">
 <div class="carusel">
 <div class="marca">
-<a href="#"><img src="imagenes/7.png " alt=""></a>
+<a href=""><img src="imagenes/7.png " alt=""></a>
 </div>
 <div class="marca">
-<a href="#"><img src="imagenes/2.png " alt=""></a>
+<a href=""><img src="imagenes/2.png " alt=""></a>
 </div>
 <div class="marca">
-<a href="#"><img src="imagenes/3.png " alt=""></a>
+<a href=""><img src="imagenes/3.png " alt=""></a>
 </div>
 <div class="marca">
-<a href="#"><img src="imagenes/4.png " alt=""></a>
+<a href=""><img src="imagenes/4.png " alt=""></a>
 </div>
 <div class="marca">
-<a href="#"><img src="imagenes/5.png " alt=""></a>
+<a href=""><img src="imagenes/5.png " alt=""></a>
 </div>
 <div class="marca">
-<a href="#"><img src="imagenes/6.png " alt=""></a>
+<a href=""><img src="imagenes/6.png " alt=""></a>
 </div>
 <div class="marca">
-<a href="#"><img src="imagenes/8.jfif " alt=""></a>
+<a href=""><img src="imagenes/8.jfif " alt=""></a>
 </div>
 <div class="marca">
-<a href="#"><img src="imagenes/9.jfif " alt=""></a>
+<a href=""><img src="imagenes/9.jfif " alt=""></a>
 </div>
 <div class="marca">
-<a href="#"><img src="imagenes/10.jfif " alt=""></a>
+<a href=""><img src="imagenes/10.jfif " alt=""></a>
 </div>
 <div class="marca">
-<a href="#"><img src="imagenes/11.png " alt=""></a>
+<a href=""><img src="imagenes/11.png " alt=""></a>
 </div>
 <div class="marca">
-<a href="#"><img src="imagenes/12.png " alt=""></a>
+<a href=""><img src="imagenes/12.png " alt=""></a>
 </div>
 <div class="marca">
-<a href="#"><img src="imagenes/13.png " alt=""></a>
+<a href=""><img src="imagenes/13.png " alt=""></a>
 </div>
 <div class="marca">
-<a href="#"><img src="imagenes/14.png " alt=""></a>
+<a href=""><img src="imagenes/14.png " alt=""></a>
 </div>
 <div class="marca">
-<a href="#"><img src="imagenes/15.jfif " alt=""></a>
+<a href=""><img src="imagenes/15.jfif " alt=""></a>
 </div>
 <div class="marca">
-<a href="#"><img src="imagenes/16.jfif " alt=""></a>
+<a href=""><img src="imagenes/16.jfif " alt=""></a>
 </div>
 </div>
 </div>
@@ -129,16 +143,15 @@
 </div>
   </section>
 </main>
-<!-- <footer >
+<footer >
 <div class="content">
-  <div class="row">
-    <div class="col-sm-8">
+      <div class="Contacto">
   <h3>Copyright © 2029 Compañia fantasma. Todos los derechos Reservados.</h3>
   <p> San Salvador, El Salvador.
 Tel. (503) 00000000 Fax: 000000000000</p>
 <h3>Email: compañiafantasma@fantasma.com.sv</h3>
-</div>
-<div class="col-sm-4">
+      </div>
+
   <div class="redes">
     <ul>
       <li>
@@ -172,11 +185,7 @@ Tel. (503) 00000000 Fax: 000000000000</p>
     </ul>
   </div>
 </div>
-
-</div>
-</div>
-
-</footer> -->
+</footer>
 <script type="text/javascript" src="javascript/script.js">
 </script>
   </body>
